Remove hacky alignment fix from management

--- a/app/assets/stylesheets/manage.css.scss
+++ b/app/assets/stylesheets/manage.css.scss
@@ -20,13 +20,3 @@ body {
 body > .container-fluid {
     padding-bottom: 15px;
 }
-
-.panel-project,
-.panel-education-experience,
-.panel-work-experience {
-    & > .panel-heading {
-        .panel-title > .pull-right {
-            margin-top: -5px;
-        }
-    }
-}
